destop version done

--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
       <div class="grid grid-cols-3 gap-6">
       <div class="p-7 bg-white rounded-lg shadow-xl card " >
               <div class="flex justify-between items-center" >
-                <div class="bg-[rgba(223,239,255,1)] p-2 rounded-lg">
-                  <img src="./assets/police.png" alt="" class="w-8 h-8"/>
+                <div class="bg-[rgba(255,227,226,1)] p-2 rounded-lg">
+                  <img src="./assets/emergency.png" alt="" class="w-8 h-8"/>
                 </div>
                 <button class="heart-button">
                   <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 "/>
                 </button>
               </div>
-              <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
-              <p class="text-md text-gray-400 card-title">Fire Service</p>
+              <h3 class="text-lg font-bold pt-4">Natonal Emergency Service</h3>
+              <p class="text-md text-gray-400 card-title">Natonal Emergency</p>
               <h2 class="text-xl font-bold pt-5 card-number">999</h2>
-              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">All</p>
               <div class="flex justify-between items-center pt-5 gap-3"> 
                 <button class="copy-button flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg hover:cursor-pointer"> <div class="flex justify-center items-center gap-2">
                     <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5">  <span> Copy</span> 
@@ -95,10 +95,10 @@
                   <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 "/>
                 </button>
               </div>
-              <h3 class="text-lg font-bold pt-4 ">Fire Service Number</h3>
-              <p class="text-md text-gray-400 card-title">Fire Service</p>
+              <h3 class="text-lg font-bold pt-4 ">Police Helpline Number</h3>
+              <p class="text-md text-gray-400 card-title">Police help</p>
               <h2 class="text-xl font-bold pt-5 card-number">999</h2>
-              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-16">Police</p>
               <div class="flex justify-between items-center pt-5 gap-3"> 
                  <button class="copy-button flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg hover:cursor-pointer"> <div class="flex justify-center items-center gap-2">
                     <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5">  <span> Copy</span> 
@@ -112,8 +112,8 @@
       </div>
      <div class="p-7 bg-white rounded-lg shadow-xl card" >
               <div class="flex justify-between items-center" >
-                <div class="bg-[rgba(223,239,255,1)] p-2 rounded-lg">
-                  <img src="./assets/police.png" alt="" class="w-8 h-8"/>
+                <div class="bg-[rgba(255,227,226,1)] p-2 rounded-lg">
+                  <img src="./assets/fire-service.png" alt="" class="w-8 h-8"/>
                 </div>
                 <button class="heart-button">
                   <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 "/>
@@ -122,7 +122,7 @@
               <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
               <p class="text-md text-gray-400 card-title">Fire Service</p>
               <h2 class="text-xl font-bold pt-5 card-number">999</h2>
-              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">Fire</p>
               <div class="flex justify-between items-center pt-5 gap-3"> 
                  <button class="copy-button flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg hover:cursor-pointer"> <div class="flex justify-center items-center gap-2">
                     <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5">  <span> Copy</span> 
@@ -136,17 +136,17 @@
       </div>
       <div class="p-7 bg-white rounded-lg shadow-xl card" >
               <div class="flex justify-between items-center" >
-                <div class="bg-[rgba(223,239,255,1)] p-2 rounded-lg">
-                  <img src="./assets/police.png" alt="" class="w-8 h-8"/>
+                <div class="bg-[rgba(255,227,226,1)] p-2 rounded-lg">
+                  <img src="./assets/ambulance.png" alt="" class="w-8 h-8"/>
                 </div>
                 <button class="heart-button">
                   <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 "/>
                 </button>
               </div>
-              <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
-              <p class="text-md text-gray-400 card-title">Fire Service</p>
-              <h2 class="text-xl font-bold pt-5 card-number">999</h2>
-              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
+              <h3 class="text-lg font-bold pt-4">Ambulance Service Number</h3>
+              <p class="text-md text-gray-400 card-title">Ambulance Service</p>
+              <h2 class="text-xl font-bold pt-5 card-number">01732111111</h2>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-18">Health</p>
               <div class="flex justify-between items-center pt-5 gap-3"> 
                  <button class="copy-button flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg hover:cursor-pointer"> <div class="flex justify-center items-center gap-2">
                     <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5">  <span> Copy</span> 
@@ -160,17 +160,65 @@
       </div>
      <div class="p-7 bg-white rounded-lg shadow-xl card " >
               <div class="flex justify-between items-center" >
-                <div class="bg-[rgba(223,239,255,1)] p-2 rounded-lg">
-                  <img src="./assets/police.png" alt="" class="w-8 h-8"/>
+                <div class="bg-[rgba(255,227,226,1)] p-2 rounded-lg">
+                  <img src="./assets/emergency.png" alt="" class="w-8 h-8"/>
                 </div>
                 <button class="heart-button">
                   <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 "/>
                 </button>
               </div>
-              <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
-              <p class="text-md text-gray-400 card-title">Fire Service</p>
-              <h2 class="text-xl font-bold pt-5 card-number">999</h2>
-              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
+              <h3 class="text-lg font-bold pt-4">Women & Child Helpline</h3>
+              <p class="text-md text-gray-400 card-title">Women & Child Helpline </p>
+              <h2 class="text-xl font-bold pt-5 card-number">109</h2>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">Help</p>
+              <div class="flex justify-between items-center pt-5 gap-3"> 
+                 <button class="copy-button flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg hover:cursor-pointer"> <div class="flex justify-center items-center gap-2">
+                    <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5">  <span> Copy</span> 
+                  </div>  </button>
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg bg-[rgba(0,180,70,1)]  call-button hover:bg-[rgba(0,200,62,1)] hover:cursor-pointer">
+                  <div class="flex justify-center items-center gap-2">
+                    <img src="./assets/phone-solid-full.svg" alt="" class="w-5 h-5">  <span> call</span> 
+                  </div> 
+                </button>
+               </div>
+      </div>
+      <div class="p-7 bg-white rounded-lg shadow-xl card " >
+              <div class="flex justify-between items-center" >
+                <div class="bg-[rgba(255,227,226,1)] p-2 rounded-lg">
+                  <img src="./assets/emergency.png" alt="" class="w-8 h-8"/>
+                </div>
+                <button class="heart-button">
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 "/>
+                </button>
+              </div>
+              <h3 class="text-lg font-bold pt-4">Anti-corruption Helpline</h3>
+              <p class="text-md text-gray-400 card-title">Anti-corruption</p>
+              <h2 class="text-xl font-bold pt-5 card-number">106</h2>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">Govt.</p>
+              <div class="flex justify-between items-center pt-5 gap-3"> 
+                 <button class="copy-button flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg hover:cursor-pointer"> <div class="flex justify-center items-center gap-2">
+                    <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5">  <span> Copy</span> 
+                  </div>  </button>
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg bg-[rgba(0,180,70,1)]  call-button hover:bg-[rgba(0,200,62,1)] hover:cursor-pointer">
+                  <div class="flex justify-center items-center gap-2">
+                    <img src="./assets/phone-solid-full.svg" alt="" class="w-5 h-5">  <span> call</span> 
+                  </div> 
+                </button>
+               </div>
+      </div>
+      <div class="p-7 bg-white rounded-lg shadow-xl card " >
+              <div class="flex justify-between items-center" >
+                <div class="bg-[rgba(255,227,226,1)] p-2 rounded-lg">
+                  <img src="./assets/emergency.png" alt="" class="w-8 h-8"/>
+                </div>
+                <button class="heart-button">
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 "/>
+                </button>
+              </div>
+              <h3 class="text-lg font-bold pt-4">Electricity helpline</h3>
+              <p class="text-md text-gray-400 card-title">Electricity outage</p>
+              <h2 class="text-xl font-bold pt-5 card-number">111</h2>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-24">Electricity</p>
               <div class="flex justify-between items-center pt-5 gap-3"> 
                  <button class="copy-button flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg hover:cursor-pointer"> <div class="flex justify-center items-center gap-2">
                     <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5">  <span> Copy</span> 
@@ -185,16 +233,16 @@
       <div class="p-7 bg-white rounded-lg shadow-xl card " >
               <div class="flex justify-between items-center" >
                 <div class="bg-[rgba(223,239,255,1)] p-2 rounded-lg">
-                  <img src="./assets/police.png" alt="" class="w-8 h-8"/>
+                  <img src="./assets/brac.png" alt="" class="w-8 h-8"/>
                 </div>
                 <button class="heart-button">
                   <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 "/>
                 </button>
               </div>
-              <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
-              <p class="text-md text-gray-400 card-title">Fire Service</p>
-              <h2 class="text-xl font-bold pt-5 card-number">999</h2>
-              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
+              <h3 class="text-lg font-bold pt-4">Bank Service</h3>
+              <p class="text-md text-gray-400 card-title">Bank Service</p>
+              <h2 class="text-xl font-bold pt-5 card-number">247</h2>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">Bank</p>
               <div class="flex justify-between items-center pt-5 gap-3"> 
                  <button class="copy-button flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg hover:cursor-pointer"> <div class="flex justify-center items-center gap-2">
                     <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5">  <span> Copy</span> 
@@ -209,64 +257,16 @@
       <div class="p-7 bg-white rounded-lg shadow-xl card " >
               <div class="flex justify-between items-center" >
                 <div class="bg-[rgba(223,239,255,1)] p-2 rounded-lg">
-                  <img src="./assets/police.png" alt="" class="w-8 h-8"/>
+                  <img src="./assets/Bangladesh-Railway.png" alt="" class="w-8 h-8"/>
                 </div>
                 <button class="heart-button">
                   <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 "/>
                 </button>
               </div>
-              <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
-              <p class="text-md text-gray-400 card-title">Fire Service</p>
-              <h2 class="text-xl font-bold pt-5 card-number">999</h2>
-              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
-              <div class="flex justify-between items-center pt-5 gap-3"> 
-                 <button class="copy-button flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg hover:cursor-pointer"> <div class="flex justify-center items-center gap-2">
-                    <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5">  <span> Copy</span> 
-                  </div>  </button>
-                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg bg-[rgba(0,180,70,1)]  call-button hover:bg-[rgba(0,200,62,1)] hover:cursor-pointer">
-                  <div class="flex justify-center items-center gap-2">
-                    <img src="./assets/phone-solid-full.svg" alt="" class="w-5 h-5">  <span> call</span> 
-                  </div> 
-                </button>
-               </div>
-      </div>
-      <div class="p-7 bg-white rounded-lg shadow-xl card " >
-              <div class="flex justify-between items-center" >
-                <div class="bg-[rgba(223,239,255,1)] p-2 rounded-lg">
-                  <img src="./assets/police.png" alt="" class="w-8 h-8"/>
-                </div>
-                <button class="heart-button">
-                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 "/>
-                </button>
-              </div>
-              <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
-              <p class="text-md text-gray-400 card-title">Fire Service</p>
-              <h2 class="text-xl font-bold pt-5 card-number">999</h2>
-              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
-              <div class="flex justify-between items-center pt-5 gap-3"> 
-                 <button class="copy-button flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg hover:cursor-pointer"> <div class="flex justify-center items-center gap-2">
-                    <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5">  <span> Copy</span> 
-                  </div>  </button>
-                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg bg-[rgba(0,180,70,1)]  call-button hover:bg-[rgba(0,200,62,1)] hover:cursor-pointer">
-                  <div class="flex justify-center items-center gap-2">
-                    <img src="./assets/phone-solid-full.svg" alt="" class="w-5 h-5">  <span> call</span> 
-                  </div> 
-                </button>
-               </div>
-      </div>
-      <div class="p-7 bg-white rounded-lg shadow-xl card " >
-              <div class="flex justify-between items-center" >
-                <div class="bg-[rgba(223,239,255,1)] p-2 rounded-lg">
-                  <img src="./assets/police.png" alt="" class="w-8 h-8"/>
-                </div>
-                <button class="heart-button">
-                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 "/>
-                </button>
-              </div>
-              <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
-              <p class="text-md text-gray-400 card-title">Fire Service</p>
-              <h2 class="text-xl font-bold pt-5 card-number">999</h2>
-              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
+              <h3 class="text-lg font-bold pt-4">Railway Service Helpline </h3>
+              <p class="text-md text-gray-400 card-title">Railway Service</p>
+              <h2 class="text-xl font-bold pt-5 card-number">12111</h2>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-18">Railway</p>
               <div class="flex justify-between items-center pt-5 gap-3"> 
                  <button class="copy-button flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg hover:cursor-pointer"> <div class="flex justify-center items-center gap-2">
                     <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5">  <span> Copy</span> 
