mobile reponsive done

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <title>Joruri seha</title>
   </head>
   <body>
-    <header class="">
-      <navber class="mx-8 flex justify-between items-center py-5 ">
+  <header class="">
+      <navber class="mx2 md:mx-8 flex flex-col md:flex-col justify-between items-center py-5 ">
         <div class="flex items-center gap-3 ">
           <img src="./assets/logo.png" alt="logo" class="w-10 h-10" class="w-6 h-6" />
-          <h1 class="text-lg w-12 font-bold">Emergency Services</h1>
+          <h1 class="text-lg  md:w-12 font-bold">Emergency Services</h1>
         </div>
-        <div class="flex items-center gap-6">
+        <div class="mx-2 md:mx-0 flex items-center gap-6 pt-3 md:pt-0">
           <div class="flex items-center gap-3 bg-[rgba(65,255,107,0.2)] px-3 py-1 rounded-[40px] px-5 py-2">
            <h1 id="heart-count">0</h1>
             <img src="./assets/heart.png" alt=""  class="w-6 h-6" />
@@ -39,7 +39,10 @@
           Government of the People’s Republic of Bangladesh
         </p>
       </herobanner>
-    </header>
+    </header> 
+
+   
+
     <main class="bg-[rgba(245,255,246,1)] p-10 ">
       <div>
     
@@ -61,7 +64,7 @@
  </tr>
  <tr>
     <td colspan=9 >
-      <div class="grid grid-cols-3 gap-6">
+      <div class="grid grid-cols-3 gap-6 row-auto">
       <div class="p-7 bg-white rounded-lg shadow-xl card " >
               <div class="flex justify-between items-center" >
                 <div class="bg-[rgba(255,227,226,1)] p-2 rounded-lg">
@@ -316,7 +319,8 @@
 
     </td>
  </tr>
-</table>
+</table> 
+
       </div>
     </main>
      <script src="script.js" defer ></script>
