--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
   <header class="">
-      <navber class="mx2 md:mx-8 flex flex-col md:flex-col justify-between items-center py-5 ">
+      <navber class="mx2 md:mx-8 flex flex-col md:flex-row justify-between items-center py-5 ">
         <div class="flex items-center gap-3 ">
           <img src="./assets/logo.png" alt="logo" class="w-10 h-10" class="w-6 h-6" />
           <h1 class="text-lg  md:w-12 font-bold">Emergency Services</h1>
